deploy updated site

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,113 +1,205 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
+@article{domingue2021variation,
+  keywords={paper},
+  title={Variation in respondent speed and its implications: Evidence from an adaptive testing scenario},
+  author={Domingue, Benjamin W and Kanopka, Klint and Stenhaug, Ben and Soland, James and Kuhfeld, Megan and Wise, Steve and Piech, Chris},
+  journal={Journal of Educational Measurement},
+  volume={58},
+  number={3},
+  pages={335--363},
+  year={2021},
   publisher={Wiley Online Library}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
+
+@article{kanopka2024changes,
+  keywords={paper},
+  title={Are Changes in Reported Social-Emotional Skills Just Noise? The Predictive Power of Longitudinal Differences in Self-Reports},
+  author={Kanopka, Klint and Claro, Susana and Loeb, Susanna and West, Martin and Fricke, Hans},
+  journal={AERA Open},
+  volume={10},
+  year={2024},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+
+@article{domingue2022modeling,
+  keywords={paper},
+  title={Modeling interaction and dispersion effects in the analysis of gene-by-environment interaction},
+  author={Domingue, Benjamin W and Kanopka, Klint and Mallard, Travis T and Trejo, Sam and Tucker-Drob, Elliot M},
+  journal={Behavior genetics},
+  volume={52},
+  number={1},
+  pages={56--64},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{yeatman2021rapid,
+  keywords={paper},
+  title={Rapid online assessment of reading ability},
+  author={Yeatman, Jason D and Tang, Kenny An and Donnelly, Patrick M and Yablonski, Maya and Ramamurthy, Mahalakshmi and Karipidis, Iliana I and Caffarra, Sendy and Takada, Megumi E and Kanopka, Klint and Ben-Shachar, Michal and others},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={6396},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{biernacki2023long,  
+  keywords={paper},
+  title={Long-term English learners’ mathematics course trajectories: downstream consequences of early remediation on college preparation},
+  author={Biernacki, Paulina J and Altavilla, Jennifer and Kanopka, Klint and Hsieh, Hsiaolin and Solano-Flores, Guillermo},
+  journal={International Multilingual Research Journal},
   volume={17},
-  pages={549--560},
-  year={1905}
+  number={2},
+  pages={122--138},
+  year={2023},
+  publisher={Taylor \& Francis}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{domingue2022speed,
+  keywords={paper},
+  title={Speed--Accuracy Trade-Off? Not So Fast: Marginal Changes in Speed Have Inconsistent Relationships With Accuracy in Real-World Settings},
+  author={Domingue, Benjamin W and Kanopka, Klint and Stenhaug, Ben and Sulik, Michael J and Beverly, Tanesia and Brinkhuis, Matthieu and Circi, Ruhan and Faul, Jessica and Liao, Dandan and McCandliss, Bruce and others},
+  journal={Journal of Educational and Behavioral Statistics},
+  volume={47},
+  number={5},
+  pages={576--602},
+  year={2022},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
+@article{ulitzsch2023probabilistic,
+  keywords={paper},
+  title={A Probabilistic Filtering Approach to Non-Effortful Responding},
+  author={Ulitzsch, Esther and Domingue, Benjamin W and Kapoor, Radhika and Kanopka, Klint and Rios, Joseph A},
+  journal={Educational Measurement: Issues and Practice},
+  year={2023},
+  publisher={Wiley Online Library}
+}
+
+@article{ramamurthy2023can,
+  keywords={paper},
+  title={Can a gamified, rapid, online assessment of letter encoding ability in kindergarten and first grade children predict future reading development?},
+  author={Ramamurthy, Mahalakshmi and Richie-Halford, Adam and Kanopka, Klint and Hartsough, Andrea and Osuna, Katelyn and Gorno-Tempini, Maria Luisa and Yeatman, Jason D},
+  journal={Journal of Vision},
+  volume={23},
+  number={9},
+  pages={5858--5858},
+  year={2023},
+  publisher={The Association for Research in Vision and Ophthalmology}
+}
+
+@article{caffarra2024development,
+  keywords={paper},
+  title={Development of the alpha rhythm is linked to visual white matter pathways and visual detection performance},
+  author={Caffarra, Sendy and Kanopka, Klint and Kruper, John and Richie-Halford, Adam and Roy, Ethan and Rokem, Ariel and Yeatman, Jason D},
+  journal={Journal of Neuroscience},
+  volume={44},
   number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  year={2024},
+  publisher={Soc Neuroscience}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{domingue2022ubiquitous,
+  keywords={paper},
+  title={Ubiquitous bias and false discovery due to model misspecification in analysis of statistical interactions: The role of the outcome’s distribution and metric properties.},
+  author={Domingue, Benjamin W and Kanopka, Klint and Trejo, Sam and Rhemtulla, Mijke and Tucker-Drob, Elliot M},
+  journal={Psychological Methods},
+  year={2022}
 }
+
+@article{domingue2024irtimv,
+  keywords={paper},
+  title={The InterModel Vigorish as a lens for understanding (and quantifying) the value of item response models for dichotomously coded items},
+  author={Domingue, Ben and Kanopka, Klint and Kapoor, Radhika and Pohl, Steffi and Chalmers, R. Philip and Rahal, Charles and Rhemtulla, Mijke},
+  year={2024},
+  journal={Psychometrika}
+}
+
+
+% preprints
+
+@article{domingue2023item,
+  keywords={preprint},
+  title={The Item Response Warehouse (IRW)},
+  author={Domingue, Ben and Kanopka, Klint},
+  year={2023},
+  journal={PsyArXiv}
+}
+
+@article{ma2023roar,
+  keywords={preprint},
+  title={ROAR-CAT: Rapid Online Assessment of Reading ability with Computerized Adaptive Testing},
+  author={Ma, Wanjing Anya and Richie-Halford, Adam and Burkhardt, Amy and Kanopka, Klint and Chou, Clementine and Domingue, Ben and Yeatman, Jason D},
+  year={2023},
+  journal={PsyArXiv}
+}
+
+@article{kanopka2022position,
+  keywords={preprint},
+  title={A position sensitive IRT mixture model},
+  author={Kanopka, Klint and Domingue, Ben},
+  year={2022},
+  journal={PsyArXiv}
+}
+
+@article{trejo2023phenotype,
+  keywords={preprint},
+  title={The Phenotype Differences Model Reveals Genetic Effects on Mortality Using Incomplete Sibling Data},
+  author={Trejo, Sam and Kanopka, Klint},
+  year={2023},
+  journal={SocArXiv}
+}
+
+@article{domingue2023implied,
+  keywords={preprint},
+  title={Implied probabilities of polytomous response functions for model-based prediction and comparison},
+  author={Domingue, Ben and Kanopka, Klint and Ulitzsch, Esther and Zhang, Lijin},
+  year={2023},
+  journal={PsyArXiv}
+}
+
+@article{kapoor2023differences,
+  keywords={preprint},
+  title={Differences in time usage as a competing hypothesis for observed group differences in accuracy with an application to observed gender differences in PISA data},
+  author={Kapoor, Radhika and Fahle, Erin and Kanopka, Klint and Klinowski, David and Ribeiro, Ana Carolina Trindade and Domingue, Ben},
+  year={2023},
+  journal={PsyArXiv}
+}
+
+@article{zhang2023intermodel,
+  keywords={preprint},
+  title={The InterModel Vigorish for Model Comparison in Confirmatory Factor Analysis with Binary Outcomes},
+  author={Zhang, Lijin and Kanopka, Klint and Rahal, Charles and Ulitzsch, Esther and Zhang, Zhiyong and Domingue, Benjamin},
+  journal={PsyArXiv},
+  year={2023}
+}
+
+@article{domingue2021intermodel,
+  keywords={preprint},
+  title={The InterModel Vigorish (IMV) as a flexible and portable approach for quantifying predictive accuracy with binary outcomes},
+  author={Domingue, Ben and Rahal, Charles and Faul, Jessica and Freese, Jeremy and Kanopka, Klint and Rigos, Alexandros and Stenhaug, Ben and Tripathi, Ajay},
+  year={2021},
+  journal={SocArXiv}
+}
+
+
+% Conference Proceedings
+
+@inproceedings{mongkhonvanit2019deep,
+  keywords={confpaper},
+  title={Deep knowledge tracing and engagement with MOOCs},
+  author={Mongkhonvanit, Kritphong and Kanopka, Klint and Lang, David},
+  booktitle={Proceedings of the 9th international conference on learning analytics \& knowledge},
+  pages={340--342},
+  year={2019}
+}
+
+
+
+
